--- a/house-data.html
+++ b/house-data.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>TGIF House</title>
+	  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -115,9 +116,9 @@
             </div>
         </footer>
 
-        <script src="docs/js/pro-congress-113-house.js">
+        <!--<script src="docs/js/pro-congress-113-house.js">
 
-        </script>
+        </script>-->
 
         <script src="docs/js/table-demo.js">
 
