--- a/senate-party-loyalty.html
+++ b/senate-party-loyalty.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>TGIF Senate Party Loyalty</title>
+	  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -121,8 +122,8 @@
             </div>
         </footer>
 
-        <script src="docs/js/pro-congress-113-senate.js">
-        </script>
+        <!--<script src="docs/js/pro-congress-113-senate.js">
+        </script>-->
 
         <script src="docs/js/statistics.js">
         </script>
