--- a/house-data.html
+++ b/house-data.html
@@ -3,7 +3,6 @@
 
 <head>
     <title>TGIF House</title>
-	  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,9 +10,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <!--mi css-->
     <link rel="stylesheet" href="docs/styles/pages_styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <!--boostrap para dropdown menu y footer-->
 </head>
 <!--Bootstrap 3 to get a nice looking table, es un framework-->
 
@@ -89,14 +85,43 @@
                         </div>
                         <div class="col-md-3">
                             <label for="select-states">Filter by State:</label>
-                            <select id="select-state" class="select-states" onchange="createSenateTabla()">
-                            </select>
-                        </div>
-                    </div>
+							<select>
+								<option> </option>
+								<option> </option>
+								<option> </option>
+							</select>
+						</div>
+					</div>
 
-                    <table id="senate-house-data" class="table table-hover">
 
-                    </table>
+                    <table class="table table-hover">
+						<thead>
+							<tr>
+								<th>Name </th>
+								<th>Party </th>
+								<th>State </th>
+								<th>Years in Office </th>
+								<th>% Votes w/ Party</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr v-for="miembro in miembrosFiltrados"> <!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+								<td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+								<td>{{miembro.party}}</td>
+								<td>{{miembro.state}}</td>
+								<td>{{miembro.seniority}}</td>
+								<td>{{miembro.votes_with_party_pct}}</td>
+							</tr>
+
+						</tbody>
+					</table>
+
+					<!-- <img src="../picture.jpg">	picture.jpg is located in the folder one level up from the current folder -->
+
+
+				</form>
+			</div>
+		</section>
 
 
 
@@ -119,7 +144,10 @@
         <!--<script src="docs/js/pro-congress-113-house.js">
 
         </script>-->
-
+        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+        <!--boostrap para dropdown menu y footer-->
         <script src="docs/js/table-demo.js">
 
         </script>
