--- a/senate-attendance-statistics.html
+++ b/senate-attendance-statistics.html
@@ -2,195 +2,150 @@
 <html lang="en">
 
 <head>
-    <title>TGIF Senate Attendance</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!--bootstrap para la tabla-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <!--mi css-->
-    <link rel="stylesheet" href="docs/styles/pages_styles.css">
+	<title>TGIF Senate Attendance</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<!--bootstrap para la tabla-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+	<!--mi css-->
+	<link rel="stylesheet" href="docs/styles/pages_styles.css">
 
 </head>
 <!--Bootstrap 3 to get a nice looking table, es un framework-->
 
 
-<!--margenes al bloque de texto-->
+<!--como left/right al bloque de texto-->
 <div class="container" id="app">
 
-    <body>
-        <div>
-            <img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
-            <a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
-                <img class="tgif_logo" src="docs/styles/tgif_logo.jpg" alt="TGIF">
-            </a>
+	<body>
+		<!--onLoad para cargar las funciones (que crean las tablas) de js-->
+		<div>
+			<img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
+			<a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
+				<img class="tgif_logo" src="docs/styles/tgif_logo.jpg" alt="TGIF">
+			</a>
 
-            <!-- <img src="../picture.jpg">	picture.jpg is located in the folder one level up from the current folder -->
-        </div>
-
-
-        <div class="mail-text-right"> <a href="mailto:info@tgif.net?subject=Reaching%20Out&body=How%20are%20you">
-                <u>info@tgif.net</u>
-            </a> </div>
-        <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-
-                <ul class="nav navbar-nav">
-
-                    <li><a href="index.html">Home</a></li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
-
-                        <ul class="dropdown-menu">
-                            <li><a href="house-data.html">House</a></li>
-                            <li><a href="senate-data.html">Senate</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-attendance-statistics.html">Attendance<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="house-attendance-statistics.html">House</a></li>
-                            <li><a href="senate-attendance-statistics.html">Senate</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-party-loyalty.html">Party Loyalty<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="house-party-loyalty.html">House</a></li>
-                            <li><a href="senate-party-loyalty.html">Senate</a></li>
-                        </ul>
-                    </li>
+			<!-- <img src="../picture.jpg">	picture.jpg is located in the folder one level up from the current folder -->
+		</div>
 
 
-                </ul>
-            </div>
-        </nav>
+		<div class="mail-text-right"> <a href="mailto:info@tgif.net?subject=Reaching%20Out&body=How%20are%20you">
+				<u>info@tgif.net</u>
+			</a> </div>
+		<nav class="navbar navbar-inverse">
+			<div class="container-fluid">
 
-        <header>
-            <div>
-            </div>
-        </header>
-        <!--Table container-->
-        <div>
-            <div class="row">
-                <div class="col-sm-7">
-                    <h2>Attendance</h2>
-                    <p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
+				<ul class="nav navbar-nav">
 
-                    <p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
-                </div>
+					<li><a href="index.html">Home</a></li>
+					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
 
-                <div class="col-sm-5">
-                    <h2>Senate at a glance</h2>
+						<ul class="dropdown-menu">
+							<li><a href="house-data.html">House</a></li>
+							<li><a href="senate-data.html">Senate</a></li>
+						</ul>
+					</li>
 
-                    <table id="senate-house-at-a-glance" class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Party</th>
-                                <th>Number of Reps</th>
-                                <th>% Voted with Party</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Democrats</td>
-                                <td>{{estadisticasVUE.numberD}}</td>
-                                <!--va {{ }} para indicar que es codigo VUE-->
-                                <td>{{(estadisticasVUE.vwpDem).toFixed(2)+ ' %'}}</td>
-                            </tr>
-                            <tr>
-                                <td>Republicans</td>
-                                <td>{{estadisticasVUE.numberR}}</td>
-                                <!--va {{ }} para indicar que es codigo VUE-->
-                                <td>{{(estadisticasVUE.vwpRep).toFixed(2)+ ' %'}}</td>
-                            </tr>
-                            <tr>
-                                <td>Independents</td>
-                                <td>{{estadisticasVUE.numberI}}</td>
-                                <!--va {{ }} para indicar que es codigo VUE-->
-                                <td>{{(estadisticasVUE.vwpInd).toFixed(2)+ ' %'}}</td>
-                            </tr>
-                            <tr>
-                                <td>Total</td>
-                                <td>{{estadisticasVUE.numberTOTAL}}</td>
-                                <!--va {{ }} para indicar que es codigo VUE-->
-                                <td>{{(estadisticasVUE.vwpTOTAL).toFixed(2)+ ' %'}}</td>
-                            </tr>
-                        </tbody>
+					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-attendance-statistics.html">Attendance<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="house-attendance-statistics.html">House</a></li>
+							<li><a href="senate-attendance-statistics.html">Senate</a></li>
+						</ul>
+					</li>
 
-                    </table>
-                </div>
-            </div>
+					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-party-loyalty.html">Party Loyalty<span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a href="house-party-loyalty.html">House</a></li>
+							<li><a href="senate-party-loyalty.html">Senate</a></li>
+						</ul>
+					</li>
 
-            <div class="row">
-                <div class="col-sm-6">
-                    <h2>Least Engaged (Bottom 10% Attendance)</h2>
-                    <table id="senate-house-least-engaged" class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Number of Missed Votes</th>
-                                <th>% Votes Missed</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="miembro in miembrosFiltrados">
-                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
-                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
-                                <td>{{miembro.missed_votes}}</td>
-                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
-                            </tr>
-                        </tbody>
 
-                    </table>
-                </div>
+				</ul>
+			</div>
+		</nav>
 
-                <div class="col-sm-6">
-                    <h2>Most Engaged (Top 10% Attendance)</h2>
-                    <table id="senate-house-most-engaged" class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Number of Missed Votes</th>
-                                <th>% Votes Missed</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr v-for="miembro in miembrosFiltrados">
-                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
-                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
-                                <td>{{miembro.missed_votes}}</td>
-                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
-                            </tr>
-                        </tbody>
+		<header>
+			<div>
+			</div>
+		</header>
+		<!--Table container-->
+		<div>
+			<div class="row">
+				<div class="col-sm-7">
+					<h2>Attendance</h2>
+					<p>The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
 
-                    </table>
+					<p>The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
+				</div>
 
-                </div>
-            </div>
-        </div>
+				<div class="col-sm-5">
+					<h2>Senate at a glance</h2>
 
-        <footer>
+					<table id="senate-house-at-a-glance" class="table table-hover">
+						<!--recordar cargar en body con onLoad tambien-->
+						<thead>
+							<tr>
+								<th>Party</th>
+								<th>Number of Reps</th>
+								<th>% Voted with Party</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Democrats</td>
+								<td>{{estadisticasVUE.numberD}}</td> <!--va {{ }} para indicar que es codigo VUE-->
+							</tr>
+						</tbody>
 
-            <div class="container">
-                <div class="panel panel-default text-center py-3">
-                    <div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
-                </div>
-            </div>
-        </footer>
+					</table>
+				</div>
+			</div>
 
-        <!--<script src="docs/js/pro-congress-113-senate.js">
+			<div class="row">
+				<div class="col-sm-6">
+					<h2>Least Engaged (Bottom 10% Attendance)</h2>
+					<table id="senate-house-least-engaged" class="table table-hover">
+						<!--recordar cargar en body con onLoad tambien-->
+
+					</table>
+
+				</div>
+
+				<div class="col-sm-6">
+					<h2>Most Engaged (Top 10% Attendance)</h2>
+					<table id="senate-house-most-engaged" class="table table-hover">
+						<!--recordar cargar en body con onLoad tambien-->
+
+					</table>
+
+				</div>
+			</div>
+		</div>
+
+		<footer>
+
+			<div class="container">
+				<div class="panel panel-default text-center py-3">
+					<div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+				</div>
+			</div>
+		</footer>
+
+		<!--<script src="docs/js/pro-congress-113-senate.js">
 		</script>-->
+		
+		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+		<!--boostrap para dropdown menu y footer-->
+		<script src="docs/js/statistics.js">
+		</script>
 
-        <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-        <!--boostrap para dropdown menu y footer-->
-        <script src="docs/js/statistics.js">
-        </script>
 
 
-
-    </body>
+	</body>
 </div>
 
 </html>
