--- a/house-attendance-statistics.html
+++ b/house-attendance-statistics.html
@@ -3,7 +3,6 @@
 
 <head>
 	<title>TGIF House Attendance</title>
-	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -11,18 +10,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 	<!--mi css-->
 	<link rel="stylesheet" href="docs/styles/pages_styles.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 	<!--boostrap para dropdown menu y footer-->
 </head>
 <!--Bootstrap 3 to get a nice looking table, es un framework-->
 
 
 <!--como left/right al bloque de texto-->
-<div class="container">
+<div class="container" id="app">
 
-	<body onLoad="TablaAtAGlance(), TablaLeastEngaged(), TablaMostEngaged()">
-		<!--onLoad para cargar las funciones (que crean las tablas) de js-->
+	<body>
 		<div>
 			<img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
 			<a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
@@ -85,31 +81,93 @@
 				</div>
 
 				<div class="col-sm-5">
-					<h2>House at a glance</h2>
+                    <h2>House at a glance</h2>
 
-					<table id="senate-house-at-a-glance" class="table table-hover"> <!--recordar cargar en body con onLoad tambien-->
+                    <table id="senate-house-at-a-glance" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Party</th>
+                                <th>Number of Reps</th>
+                                <th>% Voted with Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Democrats</td>
+                                <td>{{estadisticasVUE.numberD}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpDem).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Republicans</td>
+                                <td>{{estadisticasVUE.numberR}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpRep).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Independents</td>
+                                <td>{{estadisticasVUE.numberI}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpInd).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>{{estadisticasVUE.numberTOTAL}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpTOTAL).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                        </tbody>
 
-					</table>
-				</div>
+                    </table>
+                </div>
+
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6">
-					<h2>Least Engaged (Bottom 10% Attendance)</h2>
-					<table id="senate-house-least-engaged" class="table table-hover"> <!--recordar cargar en body con onLoad tambien-->
+                <div class="col-sm-6">
+                    <h2>Least Engaged (Bottom 10% Attendance)</h2>
+                    <table id="senate-house-least-engaged" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Number of Missed Votes</th>
+                                <th>% Votes Missed</th>
+                            </tr>
+                        </thead>
+                        <!-- <tbody>
+                            <tr v-for="miembro in miembrosFiltrados">
+                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
+                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+                                <td>{{miembro.missed_votes}}</td>
+                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
+                            </tr>
+                        </tbody>-->
+                    </table>
+                </div>
 
-					</table>
-					
-				</div>
+                <div class="col-sm-6">
+                    <h2>Most Engaged (Top 10% Attendance)</h2>
+                    <table id="senate-house-most-engaged" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Number of Missed Votes</th>
+                                <th>% Votes Missed</th>
+                            </tr>
+                        </thead>
+                       <!-- <tbody>
+                            <tr v-for="miembro in miembrosFiltrados">
+                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
+                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+                                <td>{{miembro.missed_votes}}</td>
+                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
+                            </tr>
+                        </tbody>-->
 
-				<div class="col-sm-6">
-					<h2>Most Engaged (Top 10% Attendance)</h2>
-					<table id="senate-house-most-engaged" class="table table-hover"> <!--recordar cargar en body con onLoad tambien-->
+                    </table>
 
-					</table>
-
-				</div>
-			</div>
+                </div>
+            </div>
 		</div>
 
 		<footer>
@@ -121,9 +179,13 @@
 			</div>
 		</footer>
 
-		<!--<script src="docs/js/pro-congress-113-house.js">
+		<!--<script src="docs/js/pro-congress-113-senate.js">
 		</script>-->
-
+		
+		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+		<!--boostrap para dropdown menu y footer-->
 		<script src="docs/js/statistics.js">
 		</script>
 
