--- a/senate-attendance-statistics.html
+++ b/senate-attendance-statistics.html
@@ -19,7 +19,6 @@
 <div class="container" id="app">
 
 	<body>
-		<!--onLoad para cargar las funciones (que crean las tablas) de js-->
 		<div>
 			<img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
 			<a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
@@ -81,47 +80,93 @@
 				</div>
 
 				<div class="col-sm-5">
-					<h2>Senate at a glance</h2>
+                    <h2>Senate at a glance</h2>
 
-					<table id="senate-house-at-a-glance" class="table table-hover">
-						<!--recordar cargar en body con onLoad tambien-->
-						<thead>
-							<tr>
-								<th>Party</th>
-								<th>Number of Reps</th>
-								<th>% Voted with Party</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Democrats</td>
-								<td>{{estadisticasVUE.numberD}}</td> <!--va {{ }} para indicar que es codigo VUE-->
-							</tr>
-						</tbody>
+                    <table id="senate-house-at-a-glance" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Party</th>
+                                <th>Number of Reps</th>
+                                <th>% Voted with Party</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Democrats</td>
+                                <td>{{estadisticasVUE.numberD}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpDem).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Republicans</td>
+                                <td>{{estadisticasVUE.numberR}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpRep).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Independents</td>
+                                <td>{{estadisticasVUE.numberI}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpInd).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                            <tr>
+                                <td>Total</td>
+                                <td>{{estadisticasVUE.numberTOTAL}}</td>
+                                <!--va {{ }} para indicar que es codigo VUE-->
+                                <td>{{(estadisticasVUE.vwpTOTAL).toFixed(2)+ ' %'}}</td>
+                            </tr>
+                        </tbody>
 
-					</table>
-				</div>
+                    </table>
+                </div>
+
 			</div>
 
 			<div class="row">
-				<div class="col-sm-6">
-					<h2>Least Engaged (Bottom 10% Attendance)</h2>
-					<table id="senate-house-least-engaged" class="table table-hover">
-						<!--recordar cargar en body con onLoad tambien-->
+                <div class="col-sm-6">
+                    <h2>Least Engaged (Bottom 10% Attendance)</h2>
+                    <table id="senate-house-least-engaged" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Number of Missed Votes</th>
+                                <th>% Votes Missed</th>
+                            </tr>
+                        </thead>
+                        <!-- <tbody>
+                            <tr v-for="miembro in miembrosFiltrados">
+                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
+                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+                                <td>{{miembro.missed_votes}}</td>
+                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
+                            </tr>
+                        </tbody>-->
+                    </table>
+                </div>
 
-					</table>
+                <div class="col-sm-6">
+                    <h2>Most Engaged (Top 10% Attendance)</h2>
+                    <table id="senate-house-most-engaged" class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Number of Missed Votes</th>
+                                <th>% Votes Missed</th>
+                            </tr>
+                        </thead>
+                       <!-- <tbody>
+                            <tr v-for="miembro in miembrosFiltrados">
+                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
+                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+                                <td>{{miembro.missed_votes}}</td>
+                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
+                            </tr>
+                        </tbody>-->
 
-				</div>
+                    </table>
 
-				<div class="col-sm-6">
-					<h2>Most Engaged (Top 10% Attendance)</h2>
-					<table id="senate-house-most-engaged" class="table table-hover">
-						<!--recordar cargar en body con onLoad tambien-->
-
-					</table>
-
-				</div>
-			</div>
+                </div>
+            </div>
 		</div>
 
 		<footer>
