--- a/house-attendance-statistics.html
+++ b/house-attendance-statistics.html
@@ -19,6 +19,7 @@
 <div class="container" id="app">
 
 	<body>
+		<!--onLoad para cargar las funciones (que crean las tablas) de js-->
 		<div>
 			<img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
 			<a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
@@ -65,7 +66,6 @@
 			</div>
 		</nav>
 
-
 		<header>
 			<div>
 			</div>
@@ -81,7 +81,7 @@
 				</div>
 
 				<div class="col-sm-5">
-                    <h2>House at a glance</h2>
+                    <h2>Senate at a glance</h2>
 
                     <table id="senate-house-at-a-glance" class="table table-hover">
                         <thead>
@@ -124,57 +124,61 @@
 			</div>
 
 			<div class="row">
-                <div class="col-sm-6">
-                    <h2>Least Engaged (Bottom 10% Attendance)</h2>
-                    <table id="senate-house-least-engaged" class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Number of Missed Votes</th>
-                                <th>% Votes Missed</th>
-                            </tr>
-                        </thead>
-                        <!-- <tbody>
-                            <tr v-for="miembro in miembrosFiltrados">
-                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
-                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
-                                <td>{{miembro.missed_votes}}</td>
-                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
-                            </tr>
-                        </tbody>-->
-                    </table>
-                </div>
+				<div class="col-sm-6">
+					<h2>Least Engaged (Bottom 10% Attendance)</h2>
+					<table id="senate-house-least-engaged" class="table table-hover">
+							<thead>
+								<tr>
+									<th>Name </th>
+									<th>Number of Missed Votes </th>
+									<th>% Votes Missed</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr v-for="miembro in estadisticasVUE.least_engaged">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.missed_votes}}</td>
+									<td>{{miembro.missed_votes_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
 
-                <div class="col-sm-6">
-                    <h2>Most Engaged (Top 10% Attendance)</h2>
-                    <table id="senate-house-most-engaged" class="table table-hover">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>Number of Missed Votes</th>
-                                <th>% Votes Missed</th>
-                            </tr>
-                        </thead>
-                       <!-- <tbody>
-                            <tr v-for="miembro in miembrosFiltrados">
-                                <!--se usa v-for porque recorremos miembrosFiltrados que es un array
-                                <td> <a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
-                                <td>{{miembro.missed_votes}}</td>
-                                <td>{{(miembro.missed_votes_pct + ' %'}}</td>
-                            </tr>
-                        </tbody>-->
+					</table>
 
-                    </table>
+				</div>
 
-                </div>
-            </div>
+				<div class="col-sm-6">
+					<h2>Most Engaged (Top 10% Attendance)</h2>
+					<table id="senate-house-most-engaged" class="table table-hover">
+						<thead>
+								<tr>
+									<th>Name </th>
+									<th>Number of Missed Votes </th>
+									<th>% Votes Missed</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr v-for="miembro in estadisticasVUE.most_engaged">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.missed_votes}}</td>
+									<td>{{miembro.missed_votes_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
+
+					</table>
+
+				</div>
+			</div>
 		</div>
 
 		<footer>
 
 			<div class="container">
 				<div class="panel panel-default text-center py-3">
-					<div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+					<div class="panel-heading text-center py-3">© 2019 TGIF by Elizabeth | All Rights Reserved</div>
 				</div>
 			</div>
 		</footer>
