--- a/house-data.html
+++ b/house-data.html
@@ -85,10 +85,14 @@
                         </div>
                         <div class="col-md-3">
                             <label for="select-states">Filter by State:</label>
-                            <select id="estados">
-                                <option> </option>
-                                <option> </option>
-                                <option> </option>
+                            <select id="estados" onchange="filterTable()">
+                                <option value="">
+                                    All
+                                </option>
+
+                                <option v-bind:value="estado" v-for="estado in listaEstados"> 
+                                    {{ estado }}
+                                </option>
                             </select>
                         </div>
                     </div>
@@ -129,7 +133,7 @@
 
             <div class="container">
                 <div class="panel panel-default text-center py-3">
-                    <div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+                    <div class="panel-heading text-center py-3">© 2019 TGIF by Elizabeth | All Rights Reserved</div>
                 </div>
             </div>
         </footer>
