--- a/house-party-loyalty.html
+++ b/house-party-loyalty.html
@@ -18,69 +18,69 @@
 <div class="container" id="app">
 
 	<body>
-		<div>
-			<img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
-			<a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
-				<img class="tgif_logo" src="docs/styles/tgif_logo.jpg" alt="TGIF">
-			</a>
+        <div>
+            <img class="mail_logo" src="docs/styles/mail4_gif.gif" alt="Mail">
+            <a href="https://www.whitehouse.gov/the_press_office/TransparencyandOpenGovernment">
+                <img class="tgif_logo" src="docs/styles/tgif_logo.jpg" alt="TGIF">
+            </a>
 
-			<!-- <img src="../picture.jpg">	picture.jpg is located in the folder one level up from the current folder -->
-		</div>
-
-
-		<div class="mail-text-right"> <a href="mailto:info@tgif.net?subject=Reaching%20Out&body=How%20are%20you">
-				<u>info@tgif.net</u>
-			</a> </div>
-		<nav class="navbar navbar-inverse">
-		    <div class="container-fluid">
-
-		        <ul class="nav navbar-nav">
-
-		            <li><a href="index.html">Home</a></li>
-		            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
-
-		                <ul class="dropdown-menu">
-		                    <li><a href="house-data.html">House</a></li>
-		                    <li><a href="senate-data.html">Senate</a></li>
-		                </ul>
-		            </li>
-
-		            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-attendance-statistics.html">Attendance<span class="caret"></span></a>
-		                <ul class="dropdown-menu">
-		                    <li><a href="house-attendance-statistics.html">House</a></li>
-		                    <li><a href="senate-attendance-statistics.html">Senate</a></li>
-		                </ul>
-		            </li>
-
-		            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-party-loyalty.html">Party Loyalty<span class="caret"></span></a>
-		                <ul class="dropdown-menu">
-		                    <li><a href="house-party-loyalty.html">House</a></li>
-		                    <li><a href="senate-party-loyalty.html">Senate</a></li>
-		                </ul>
-		            </li>
+            <!-- <img src="../picture.jpg">	picture.jpg is located in the folder one level up from the current folder -->
+        </div>
 
 
-		        </ul>
-		    </div>
-		</nav>
+        <div class="mail-text-right"> <a href="mailto:info@tgif.net?subject=Reaching%20Out&body=How%20are%20you">
+                <u>info@tgif.net</u>
+            </a> </div>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+
+                <ul class="nav navbar-nav">
+
+                    <li><a href="index.html">Home</a></li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#"> Congress 113 <span class="caret"></span></a>
+
+                        <ul class="dropdown-menu">
+                            <li><a href="house-data.html">House</a></li>
+                            <li><a href="senate-data.html">Senate</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-attendance-statistics.html">Attendance<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-attendance-statistics.html">House</a></li>
+                            <li><a href="senate-attendance-statistics.html">Senate</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="senate-party-loyalty.html">Party Loyalty<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="house-party-loyalty.html">House</a></li>
+                            <li><a href="senate-party-loyalty.html">Senate</a></li>
+                        </ul>
+                    </li>
 
 
-		<header>
-			<div>
-			</div>
-		</header>
-		<!--Table container-->
-		<div>
-			<div class="row">
-				<div class="col-sm-7">
-					<h2>Party Loyalty</h2>
-					<p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
-				</div>
+                </ul>
+            </div>
+        </nav>
 
-				<div class="col-sm-5">
-					<h2>House at a glance</h2>
 
-					 <table id="senate-house-at-a-glance" class="table table-hover">
+        <header>
+            <div>
+            </div>
+        </header>
+        <!--Table container-->
+        <div>
+            <div class="row">
+                <div class="col-sm-7">
+                    <h2>Party Loyalty</h2>
+                    <p>Those who consider themselves to be strong partisans, strong Democrats and strong Republicans respectively, tend to be the most faithful in voting for their party's nominee for office and legislation that backs their party's agenda. </p>
+                </div>
+
+                <div class="col-sm-5">
+                    <h2>Senate at a glance</h2>
+
+                    <table id="senate-house-at-a-glance" class="table table-hover">
                         <thead>
                             <tr>
                                 <th>Party</th>
@@ -130,6 +130,15 @@
                                 <th>% Party Votes</th>
                             </tr>
                         </thead>
+                        <tbody>
+								<tr v-for="miembro in estadisticasVUE.least_loyal">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.total_votes}}</td>
+									<td>{{miembro.votes_with_party_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
                     </table>
 
                 </div>
@@ -144,6 +153,15 @@
                                 <th>% Party Votes</th>
                             </tr>
                         </thead>
+                        <tbody>
+								<tr v-for="miembro in estadisticasVUE.most_loyal">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.total_votes}}</td>
+									<td>{{miembro.votes_with_party_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
 
                     </table>
 
@@ -154,9 +172,9 @@
 
         <footer>
 
-            <div class="container">
+			<div class="container">
 				<div class="panel panel-default text-center py-3">
-					<div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+					<div class="panel-heading text-center py-3">© 2019 TGIF by Elizabeth | All Rights Reserved</div>
 				</div>
 			</div>
 		</footer>
