--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <footer>
 
             <div class="panel panel-default text-center py-3">
-                <div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+                <div class="panel-heading text-center py-3">© 2019 TGIF by Elizabeth | All Rights Reserved</div>
             </div>
 
         </footer>
