--- a/senate-attendance-statistics.html
+++ b/senate-attendance-statistics.html
@@ -127,7 +127,22 @@
 				<div class="col-sm-6">
 					<h2>Least Engaged (Bottom 10% Attendance)</h2>
 					<table id="senate-house-least-engaged" class="table table-hover">
-						<!--recordar cargar en body con onLoad tambien-->
+							<thead>
+								<tr>
+									<th>Name </th>
+									<th>Number of Missed Votes </th>
+									<th>% Votes Missed</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr v-for="miembro in estadisticasVUE.least_engaged">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.missed_votes}}</td>
+									<td>{{miembro.missed_votes_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
 
 					</table>
 
@@ -136,7 +151,22 @@
 				<div class="col-sm-6">
 					<h2>Most Engaged (Top 10% Attendance)</h2>
 					<table id="senate-house-most-engaged" class="table table-hover">
-						<!--recordar cargar en body con onLoad tambien-->
+						<thead>
+								<tr>
+									<th>Name </th>
+									<th>Number of Missed Votes </th>
+									<th>% Votes Missed</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr v-for="miembro in estadisticasVUE.most_engaged">
+									<!--se usa v-for porque recorremos miembrosFiltrados que es un array-->
+                                    <td><a :href="miembro.url"> {{miembro.first_name}} {{miembro.middle_name}} {{miembro.last_name}} </a></td>
+									<td>{{miembro.missed_votes}}</td>
+									<td>{{miembro.missed_votes_pct + ' %'}}</td>
+								</tr>
+		
+							</tbody>
 
 					</table>
 
@@ -148,7 +178,7 @@
 
 			<div class="container">
 				<div class="panel panel-default text-center py-3">
-					<div class="panel-heading text-center py-3">© 2019 TGIF | All Rights Reserved</div>
+					<div class="panel-heading text-center py-3">© 2019 TGIF by Elizabeth | All Rights Reserved</div>
 				</div>
 			</div>
 		</footer>
